tests/compile-fail/integration_suite__integration__general__eosd_anm_early_end.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: statement after end of script
   ┌─ <input>:29:9
   │
28 │         ins_0();
   │         ----- marks the end of the script
29 │         pos(0f, 0f, 0f);
   │         ^^^^^^^^^^^^^^^^ forbidden statement
   │
   = In EoSD ANM, every script must have a single exit point (opcode 0 or 15), as the final instruction.


